# summa-solvency-diffie

./: .gitignore
backend/fuzz/: Cargo.toml
backend/fuzz/fuzz_targets/: fuzz_target_1.rs
zk_prover/: Cargo.toml  MST.md
zk_prover/fuzz/: Cargo.toml
zk_prover/fuzz/fuzz_targets/: csv_fuzz.rs  entry_fuzz.rs  util_fuzz.rs
zk_prover/src/circuits/: merkle_sum_tree.rs
zk_prover/src/merkle_sum_tree/: tests.rs
zk_prover/src/merkle_sum_tree/utils/: mod.rs
