[package]
name = "summa-solvency-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-bigint = "0.4"
summa-solvency = { path = "../" }
tempfile = "3.3.0"
rand = "0.8"

[[bin]]
name = "csv"
path = "fuzz_targets/csv_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "entry"
path = "fuzz_targets/entry_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "util"
path = "fuzz_targets/util_fuzz.rs"
test = false
doc = false
bench = false